Responsive sidebar and spacing fix

--- a/app/musicgpt.scss
+++ b/app/musicgpt.scss
@@ -27,7 +27,7 @@ body {
   -moz-osx-font-smoothing: grayscale;
 }
 
-.bg-homeGradiant {
+.bg-section-gradient {
   background-image: linear-gradient(
     180deg,
     rgba(255, 255, 255, 0.04),
@@ -45,6 +45,10 @@ body {
   gap: 10px;
 }
 
-.logo-text{
+.gpt-text-std {
+  font-size: 1rem;
+}
+
+.gpt-text-sm{
   font-size: 1.125rem;
 }
